Bug #27205 Occasional 899 if delete+insert during LCP
Submitted: 16 Mar 2007 11:47 Modified: 30 Apr 2007 10:45
Reporter: Jonas Oreland
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:5.1 OS:Any
Assigned to: Jonas Oreland Target Version:

[16 Mar 2007 11:47] Jonas Oreland
Description:
Rare/Occational 899 
When doing delete+insert _during_ a lcp

How to repeat:
create_tab T1
hugoLoad -r 1000 T1
ndb_mgm -e "3 error 10036"
ndb_mgm -e "all dump 7099"
ndb_delete_all T1
hugoLoad -r 1000 T1

(to remove, ndb_mgm -e "3 error 10037")
[16 Mar 2007 11:53] Jonas Oreland
1) Put LCP_KEEP list in Undo_buffer instead.
This would imply that a Delete could get out of memory...which is sort of wierd
But otherwise this is kind of nice...
NR-Scan would also need to scan this then...(maybe not...)

2) Let nodes report to primary replica, how far they have got in LCP
   so that it can release the rowid's.
  
   This does however sound very tricky on +2 replica...
[26 Apr 2007 13:25] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/25496

ChangeSet@1.2464, 2007-04-26 13:41:33+02:00, tomas@whalegate.ndb.mysql.com +4 -0
  Bug #27205 Occational 899 if delete+insert during LCP
  - put page of deleted row last in list
[28 Apr 2007 21:35] Bugs System
Pushed into 5.1.18-beta
[30 Apr 2007 10:45] Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.

If necessary, you can access the source repository and build the latest available version,
including the bug fix. More information about accessing the source trees is available at

    http://dev.mysql.com/doc/en/installing-source.html

Documented bug fix in 5.1.18 changelog.