Bug #27205 Occational 899 if delete+insert during LCP - put page of deleted row last in list